# weather_station

./: .gitignore  LICENSE  README.md
docs/: architecture.md  architecture.mmd  setup.md
docs/images/: README.md
firmware/gateway-receiver/: CMakeLists.txt  README.md
firmware/gateway-receiver/main/: CMakeLists.txt  espnow_rx.c  espnow_rx.h  main.c  uart_forward.c  uart_forward.h
firmware/sensor-node/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/sensor-node/main/: CMakeLists.txt  espnow_tx.c  espnow_tx.h  main.c  sensors.c  sensors.h
firmware/sensor-node/main/ulp/: CMakeLists.txt  ulp_main.c
hardware/: bom.md
hardware/schematics/: README.md
raspberry-pi/: README.md  docker-compose.yml  requirements.txt
raspberry-pi/config/: config.example.yaml
raspberry-pi/grafana/dashboards/: sensors.json
raspberry-pi/src/: db_writer.py  serial_listener.py
